finalizing before hosting
